@@ -4,6 +4,7 @@
 * chat styles: #1866 fixed: use small version of avatars in chat window (Vogel)
 * emoticons: #2475 fixed: accept non-latin characters in emoticons (Vogel)
 * gui: #1948 fixed: sometimes size of infopanel was lost from configuration (Vogel)
+* core: #2436 fixed: do not ask for password for accounts with no passwords after saving configuration (Vogel)
 
 +++ version 0.12.0-beta1
 * tabs: "Close all tabs but active one" action added (Juzef)
